--- a/proj.ios/Info.plist
+++ b/proj.ios/Info.plist
@@ -60,6 +60,14 @@
 				<string>fb1440390216179601</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent100424468</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
