--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,25 @@
-*.lib
-*.class
+# Xcode
+#
+build/
+product/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+project.xcworkspace
+!default.xcworkspace
+xcuserdata
+UMSocialSDK.xcodeproj/project.xcworkspace/xcuserdata/umeng.xcuserdatad/UserInterfaceState.xcuserstate
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcbkptlist
+*.xcuserstate
+*.xcscmblueprint
 .DS_Store
-proj.blackberry/
-proj.mac/*
-proj.win32/*
-proj.wp8/
-proj.winrt/
-proj.linux/
-proj.marmalade/
-proj.android/obj/*
-proj.android/gen/
-proj.android/bin/
-**/*.o
-**/*.d
